[package]
name = "edifact-types"
version = "0.3.2"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","edifact"]
repository = "https://github.com/apimeister/edifact-types/"
documentation = "https://docs.rs/edifact-types/"
description = "Bindings for the Edifact standard"

[dependencies]
serde = { version = "1", features = ["derive"] }
strum_macros = "0.25"
strum = "0.25"
proc-macro2 = "1"
quote = "1.0"
syn = { version = "2.0", features = ["parsing", "extra-traits"] }
edifact-types-macros = "0.2"
nom = "7"

[features]
default = ["d00b","d95b"]
d00b = []
d95b = []