[package]
name = "edifact-types"
version = "0.4.1"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","edifact"]
repository = "https://github.com/apimeister/edifact-types/"
documentation = "https://docs.rs/edifact-types/"
description = "Bindings for the Edifact standard"

[dependencies]
serde = { version = "1", features = ["derive"] }
strum_macros = "0.25"
strum = "0.26"
edifact-types-macros = "0.3"
# enable macros debug vie feature flag
# edifact-types-macros = {version = "0.3", features = ["debug"]}
nom = "7"
log = {version = "0.4", optional = true }

[features]
default = ["d00b","d95b"]
d00b = []
d95b = []
logging = ["log"]

[dev-dependencies]
regex = "1.10.2"
env_logger = "0.11"
